--- a/sass/_mediaqueries.scss
+++ b/sass/_mediaqueries.scss
@@ -72,11 +72,6 @@
             display: none;   
         }
         
-        a {
-            height: 50px;
-            line-height: 46px;
-        }
-        
         > nav a {
             padding: 0 0.6em;    
         }
