--- a/sass/_pages/_home.scss
+++ b/sass/_pages/_home.scss
@@ -293,10 +293,6 @@
         left: -60px;
         top: 0.8em;
         z-index: 100;
-        
-        &:after {
-            top: 110% !important;
-        }
     }
     
     header,
